--- a/frontend/src/pages/Pages.css
+++ b/frontend/src/pages/Pages.css
@@ -1,3 +1,14 @@
 section {
   margin-top: 100px;
 }
+
+h1 {
+  text-align: center;
+}
+
+.platform-style {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+}
